--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,9 +3,11 @@ on: [ pull_request ]
 jobs:
   cpp_style_check:
     runs-on: ubuntu-latest
-    name: Check C++ Style
+    name: Check C++ Styling
     steps:
     - name: Checkout this commit
-      uses: actions/checkout@v2
-    - name: Run style checks
-      uses: coleaeason/actions-uncrustify@v1
+      uses: actions/checkout@v3
+    - name: uncrustify-check
+      uses: Daniel-Trevitz/uncrustify-check@v0.2.0
+      with:
+        configFile: 'uncrustify.cfg'
