--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,13 +1,18 @@
+name: PR
+
 on: [ pull_request ]
 
 jobs:
   cpp_style_check:
     runs-on: ubuntu-latest
-    name: Check C++ Styling
+    name: Check C Styling
     steps:
     - name: Checkout this commit
       uses: actions/checkout@v3
-    - name: uncrustify-check
-      uses: Daniel-Trevitz/uncrustify-check@v0.2.0
+      with:
+        fetch-depth: 2
+    - name: uncrustify check
+      uses: Daniel-Trevitz/uncrustify-check@v1
       with:
         configFile: 'uncrustify.cfg'
+        checkedPaths: 'src;include'
